Finished CSS. Added some JS if statements to cover null values.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,93 @@
 * {
   margin: 0;
 }
+
 body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1,h2 {
+h1, h2 {
   font-family: 'Zilla Slab', serif;
 }
 
 h1 {
   font-weight: 300;
+  font-size: 5vw;
+  padding: .5em;
 }
 
 h2 {
   font-weight: 700;
+  font-size: 2.2vw;
+  padding: 1.5em 0 1em;
+  color: black;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  background-color: #2a2a2a;
+  color: white;
+  background-image: /* Bottom jagged */
+  linear-gradient(45deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%), linear-gradient(-45deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%), /* Top and bottom fade  */
+  /*linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%),*/
+  linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background-position: /* Bottom jagged */
+  bottom center, bottom center, /* Bottom fade */
+  bottom center;
+  background-size: /* Top + bottom jagged */
+  1.5rem 1.5rem, 1.5rem 1.5rem, 1.5rem 1.5rem, 1.5rem 1.5rem, /* Top + bottom fade */
+  100% 1.75rem, 100% 1.75rem;
+  background-repeat: repeat-x;
 }
 
 section {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 14px;
+  color: grey;
+}
+
+#basics {
+  width: 20vw;
+  text-decoration: none;
+  line-height: 1.8em;
+}
+
+li>a {
+  color: black;
+}
+
+label {
+  color: teal;
+}
+
+#story {
+  width: 30vw;
+  line-height: 1.8em;
+}
+
+#story>p {
+  padding-left: 30px;
+  border-left: solid 2px lightgrey;
+}
+
+#story>h2 {
+  padding-left: 30px;
+}
+
+#photo {
+  width: 15vw;
+  height: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 8vw;
+  min-width: 110px;
+  border-radius: 50%;
 }
